--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ flutter:
          weight: 300
        - asset: assets/fonts/Poppins-Bold.ttf
          weight: 700
+       - asset: assets/fonts/Poppins-Medium.ttf
+         weight: 500
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
