--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_nav_bar: ^5.0.6
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
+  flutter_tts: ^3.8.5
 
 dev_dependencies:
   flutter_test:
